# lzma-static

./: .gitignore  Changelog.md  cabal.project  configure  configure.ac  gen-header.sh  lzma-static.cabal
.github/workflows/: test.yaml
autoconf-darwin-aarch64/: config.h
autoconf-freebsd/: config.h
autoconf-freebsd-aarch64/: config.h
autoconf-linux-aarch64/: config.h
autoconf-linux-arm/: config.h
autoconf-linux-i386/: config.h
cbits/: config.h.in
lzma-clib/: lzma-clib.cabal  run-autoreconf.sh
lzma-static/: Changelog.md  lzma-static.cabal
xz/: Changelog.md  xz.cabal
xz-clib/: Changelog.md  README.md  configure.ac  gen-c-files.sh  run-autoreconf.sh  xz-clib.cabal
xz-clib/cbits/: config.h.in
