cabal-version:       2.2
name:                lzma-static
version:             5.2.5.5

synopsis:            LZMA/XZ compression and decompression (static)
homepage:            https://github.com/hasufell/lzma-static
bug-reports:         https://github.com/hasufell/lzma-static/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Julian Ospald
maintainer:          hasufell@posteo.de
copyright:           (c) 2015, Herbert Valerio Riedel, (c) 2021 Julian Ospald
stability:           experimental
category:            Codec, Compression
build-type:          Simple
tested-with:         GHC==8.6.5, GHC==8.8.4, GHC==8.10.4
description:
    This package provides a pure interface for compressing and
    decompressing
    <https://en.wikipedia.org/wiki/LZMA LZMA (Lempel–Ziv–Markov chain algorithm)>
    streams of data represented as lazy @ByteString@s. A
    monadic incremental interface is provided as well. This package
    relies on the <http://tukaani.org/xz/ liblzma C library>.

extra-doc-files:
  Changelog.md

source-repository head
  type:     git
  location: https://github.com/hasufell/lzma-static.git

library
  default-language:    Haskell2010
  other-extensions:    BangPatterns, RecordWildCards, DeriveDataTypeable
  hs-source-dirs:      src

  exposed-modules:     Codec.Compression.Lzma
  other-modules:       LibLzma

  build-depends:       base       >=4.5    && <5
                     , bytestring >=0.9.2  && <0.13
                     , lzma-clib  >=5.2.5

  cc-options: -std=gnu99 -DHAVE_CONFIG_H -DTUKLIB_SYMBOL_PREFIX=lzma_
  ghc-options:         -Wall


test-suite lzma-tests
  default-language:    Haskell2010
  other-extensions:    OverloadedStrings
  hs-source-dirs:      src-tests
  type:                exitcode-stdio-1.0
  main-is:             lzma-tests.hs

  -- dependencies with version bounds inherited from the library stanza
  build-depends:       lzma-clib                  >=5.2.5
                     , lzma-static
                     , base
                     , bytestring
  -- additional dependencies that require version bounds
  build-depends:       HUnit                      >= 1.2      && <1.7
                     , QuickCheck                 >= 2.8      && <2.15
                     , tasty                      >= 0.10     && <1.4
                     , tasty-hunit                >= 0.9      && <0.11
                     , tasty-quickcheck           >= 0.8.3.2  && <0.11

  ghc-options:         -Wall -threaded

